--- a/04. Repository_Template/Repository_Template/WinFormCustomer/WinFormCustomer.csproj
+++ b/04. Repository_Template/Repository_Template/WinFormCustomer/WinFormCustomer.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\InterfaceCustomer\InterfaceCustomer.csproj" />
     <ProjectReference Include="..\FactoryCustomer\FactoryCustomer.csproj" />
+    <ProjectReference Include="..\FactoryDAL\FactoryDAL.csproj" />
     <ProjectReference Include="..\InterfaceDal\InterfaceDal.csproj" />
   </ItemGroup>
 
